--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "path": "^0.12.7"
   }
 }
